#set(CMAKE_CXX_COMPILER_ID "Clang")
IF(CMAKE_CXX_COMPILER_ID MATCHES Clang|GNU)
    string(APPEND CMAKE_CXX_FLAGS " -Wall -Wextra -Wshadow -Wconversion -std=c++2a")
    IF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
        message("Clang")
        string(APPEND CMAKE_CXX_FLAGS " -Wno-potentially-evaluated-expression -Wno-deprecated-anon-enum-enum-conversion")
    ELSE()
        message("Not Clang")
    ENDIF()
ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    message("MSVC")
    string(APPEND CMAKE_CXX_FLAGS " /std:c++17")
ELSE()
    message("Not GNU,Clang,MSVC")
ENDIF()

add_library(json STATIC ParseJSON.cpp JsonObjs.cpp Parser.cpp Scanner.cpp)
target_include_directories(json PRIVATE ../include ../../bux/include)
